[package]
name = "hello-blockchain"
version = "0.1.0"
authors = ["Asi7ho <46624642+Asi7ho@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9.3"